# ABS-Scan

./: .gitignore  README.md  alanine_scanning.py  alanine_scanning_v2.py  pyproject.toml  rosetta_dock.sh
abscan/: __init__.py  cli.py  plotting.py  scanner.py  utils.py
test/: 1a4g_A_ALA_244_ALA.pdbqt  1a4g_A_ARG_115_ALA.pdbqt  1a4g_A_ARG_149_ALA.pdbqt  1a4g_A_ARG_153_ALA.pdbqt  1a4g_A_ARG_291_ALA.pdbqt  1a4g_A_ARG_373_ALA.pdbqt  1a4g_A_ASN_293_ALA.pdbqt  1a4g_A_ASP_148_ALA.pdbqt  1a4g_A_GLU_116_ALA.pdbqt  1a4g_A_GLU_225_ALA.pdbqt  1a4g_A_GLU_274_ALA.pdbqt  1a4g_A_GLU_275_ALA.pdbqt  1a4g_A_ILE_220_ALA.pdbqt  1a4g_A_TRP_176_ALA.pdbqt  1a4g_A_TYR_408_ALA.pdbqt  1a4g_A_ligand.pdbqt  1a4g_A_receptor.pdbqt  Alanine_Scanning_Binding_Energies_Result.txt
tests/: test_abscan.py
